Attempt to get Travis to run the tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ matrix:
   - scala: 2.13.0-M5
     script:
     # TODO scalatags for Scala 2.13.0-M4
-    - sbt "++ ${TRAVIS_SCALA_VERSION}!" code/test
+    - sbt "++ ${TRAVIS_SCALA_VERSION}!" test
