Start updating to use Dotty

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,9 @@
-version = "2.0.1"
+version = "3.0.0-RC6"
+fileOverride {
+  "glob:**/core/shared/src/main/scala/**" {
+     runner.dialect = scala3
+  }
+  "glob:**/core/shared/src/test/scala/**" {
+     runner.dialect = scala3
+  }
+}
