--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,4 +7,4 @@ jobs:
    - uses: actions/checkout@v2
    - uses: olafurpg/setup-scala@v11
    - name: Compile
-     run: sbt compile
+     run: sbt 'compile; test; scalafmtCheckAll'
