--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [3, 2.13]
+        scala: [3]
         java: [temurin@8]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
@@ -137,16 +137,6 @@ jobs:
           name: target-${{ matrix.os }}-${{ matrix.java }}-3
 
       - name: Inflate target directories (3)
-        run: |
-          tar xf targets.tar
-          rm targets.tar
-
-      - name: Download target directories (2.13)
-        uses: actions/download-artifact@v3
-        with:
-          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13
-
-      - name: Inflate target directories (2.13)
         run: |
           tar xf targets.tar
           rm targets.tar
