Ignore images in documentation
They are generated by code

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ project/project
 # Documentation intermediate files
 docs/src/main/paradox
 docs/src/main/mdoc/api
+docs/src/pages/**/*.png
 
 
 ### SublimeText ###
