--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ src_managed/
 project/boot/
 project/plugins/project/
 project/target
-project/project
+project/project/metals.sbt
+project/project/project
 
 # Scala-IDE specific
 .scala_dependencies
