Update scalafmt and reformat

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,10 +1,2 @@
-version = "3.0.0-RC6"
-fileOverride {
-  "glob:**/core/shared/src/main/scala/**" {
-     runner.dialect = scala3
-  }
-  "glob:**/core/shared/src/test/scala/**" {
-     runner.dialect = scala3
-  }
-}
+version = "3.8.1"
 runner.dialect = scala3
