docs: svg filter

--- a/docs/src/pages/directory.conf
+++ b/docs/src/pages/directory.conf
@@ -4,10 +4,11 @@ laika.navigationOrder = [
   pictures
   core
   interact
+  filters
   algebra
   effect
   java2d
   svg
   canvas
-  development 
+  development
 ]
