--- a/docs/src/pages/canvas/directory.conf
+++ b/docs/src/pages/canvas/directory.conf
@@ -1,6 +1,6 @@
 laika.navigationOrder = [
   README.md
-  to-picture.md
+  loading-images.md
   examples.md
   layout-examples.md
   style-examples.md
