Rework Canvas docs on loading and using bitmaps

--- a/docs/src/pages/canvas/directory.conf
+++ b/docs/src/pages/canvas/directory.conf
@@ -1,7 +1,6 @@
 laika.navigationOrder = [
   README.md
-  loading-images.md
-  to-picture.md
+  bitmaps.md
   examples.md
   layout-examples.md
   style-examples.md
