Create Reference section in docs
Reference aggregates a lot of documentation that was scattered in
different sections.

--- a/docs/src/pages/reference/directory.conf
+++ b/docs/src/pages/reference/directory.conf
@@ -1,6 +1,8 @@
 laika.navigationOrder = [
   README.md
-  using.md
+  geometry.md
+  color.md
+  effect.md
   picture.md
-  algebras.md
+  using.md
 ]
