--- a/docs/src/pages/directory.conf
+++ b/docs/src/pages/directory.conf
@@ -1,11 +1,9 @@
 laika.navigationOrder = [
   README.md
-  concepts
   pictures
-  core
+  concepts
   interact
-  algebra
-  effect
+  reference
   java2d
   svg
   canvas
